# service-maker

./: .gitignore  LICENCE  README.md  README.md.1  README.md.2  TODO.md  install.sh  pyproject.toml
src/service_maker/: _commands.py  arg_processor.py  cli.py  command_invoker.py  commands.py  db.json  doc_reference.json  doc_reference.py  file_helper.py  file_tools.py  get_doc  main.py  models.py  systemd_parser.py  test.py  test__.py  unit_adapter.py  utils.py  validators.py
